--- a/MircroService/pom.xml
+++ b/MircroService/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!--mybatis依赖-->
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis</groupId>-->
+<!--            <artifactId>mybatis</artifactId>-->
+<!--            <version>3.5.5</version>-->
+<!--        </dependency>-->
+
+        <!--mybatis整合spring-boot-starter-web-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
